--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.7.7",
     "expo": "~54.0.23",
+    "expo-av": "~14.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
+    "expo-secure-store": "~13.0.2",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
@@ -35,9 +39,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
-  },
-  "devDependencies": {
+    "react-native-web": "~0.21.0",
+    
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2",
     "eslint": "^9.25.0",
